Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "TP.HCM mở đường mới cho xe chở hàng hóa đi từ cảng ra cao tốc, vành đai",
+    "content": "TP.HCM vừa quyết định mở tuyến đường mới kết nối cảng Cát Lái và Phú Hữu với đường vành đai 3 và cao tốc TP.HCM - Long Thành - Dầu Giây. Tuyến đường dài 6km, rộng 60m, dự kiến được xây dựng với 12 làn xe, nhằm phục vụ vận tải hàng hóa và giảm ùn tắc giao thông. Dự án có tổng vốn đầu tư khoảng 8.719 tỉ đồng và được kỳ vọng sẽ rút ngắn thời gian di chuyển của xe cộ từ các tỉnh vào cụm cảng Cát Lái.",
+    "link": "https://tuoitre.vn/tp-hcm-mo-duong-moi-cho-xe-cho-hang-hoa-di-tu-cang-ra-cao-toc-vanh-dai-20250321150522026.htm",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Tuyến đường mới ở TP.HCM sẽ kết nối với những đâu?",
+    "answers": [
+      {
+        "text": "Cảng Cát Lái và cao tốc TP.HCM - Long Thành",
+        "correct": true
+      },
+      {
+        "text": "Sân bay Tân Sơn Nhất",
+        "correct": false
+      },
+      {
+        "text": "Khu công nghiệp Biên Hòa",
+        "correct": false
+      },
+      {
+        "text": "Cảng Hải Phòng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Những bài dưỡng sinh 'hoang dã' của người Trung Quốc",
     "content": "Nhiều người cao tuổi ở Trung Quốc đang thực hành các bài tập dưỡng sinh 'hoang dã' như bò như cá sấu, trèo cây và treo cổ trên cây với hy vọng cải thiện sức khỏe và kéo dài tuổi thọ. Mặc dù những bài tập này thu hút sự quan tâm, nhưng các chuyên gia cảnh báo rằng chúng có thể tiềm ẩn nguy cơ chấn thương nghiêm trọng, đặc biệt là với người lớn tuổi. Một số bài tập như treo cổ đã bị cấm sau khi gây ra tai nạn tử vong, trong khi các chuyên gia khuyên nên chọn các hoạt động an toàn hơn như bơi lội và đi bộ.",
     "link": "https://vnexpress.net/nhung-bai-duong-sinh-hoang-da-cua-nguoi-trung-quoc-4864189.html",
@@ -765,6 +792,33 @@
     ]
   },
   {
+    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
+    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
+    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
+    "answers": [
+      {
+        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
+        "correct": true
+      },
+      {
+        "text": "Có, vaccine HPV làm teo buồng trứng.",
+        "correct": false
+      },
+      {
+        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thủ phạm gây đau rốn",
     "content": "Đau rốn có thể do nhiều nguyên nhân khác nhau, trong đó khó tiêu là nguyên nhân phổ biến nhất. Các nguyên nhân nghiêm trọng khác bao gồm viêm ruột thừa, viêm dạ dày, và bệnh Crohn. Đau rốn có thể kèm theo các triệu chứng như buồn nôn, tiêu chảy, và cảm giác nóng rát, tùy thuộc vào nguyên nhân cụ thể. Ngoài ra, táo bón và nhiễm trùng cũng là những yếu tố có thể gây ra cơn đau này.",
     "link": "https://vnexpress.net/thu-pham-gay-dau-ron-4864078.html",
@@ -791,33 +845,6 @@
       },
       {
         "text": "Bệnh Crohn",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tiêm vaccine HPV có làm teo buồng trứng không?",
-    "content": "Vaccine HPV không làm teo buồng trứng hoặc ảnh hưởng đến khả năng sinh sản của phụ nữ. Nghiên cứu cho thấy những người tiêm vaccine không có nguy cơ cao bị suy buồng trứng so với người chưa tiêm. Vaccine này được khuyến nghị bởi Tổ chức Y tế thế giới (WHO) như một biện pháp hiệu quả để phòng ngừa các bệnh do virus HPV gây ra, bao gồm ung thư cổ tử cung.",
-    "link": "https://vnexpress.net/tiem-vaccine-hpv-co-lam-teo-buong-trung-khong-4864194.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Tiêm vaccine HPV có gây ảnh hưởng đến buồng trứng không?",
-    "answers": [
-      {
-        "text": "Không, vaccine HPV không gây ảnh hưởng đến buồng trứng.",
-        "correct": true
-      },
-      {
-        "text": "Có, vaccine HPV làm teo buồng trứng.",
-        "correct": false
-      },
-      {
-        "text": "Có thể, vaccine HPV gây ra một số vấn đề sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Không rõ, cần nghiên cứu thêm về vaccine HPV.",
         "correct": false
       }
     ]
@@ -2052,37 +2079,6 @@
     ]
   },
   {
-    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
-    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
-    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
-    "answers": [
-      {
-        "text": "Viêm phổi do virus hợp bào hô hấp",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm phế quản",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Sởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chàng trai nặng 162 kg quyết giảm cân",
     "content": "Chàng trai 24 tuổi tên Quang, nặng 162 kg, đang quyết tâm giảm cân để cải thiện sức khỏe và có thể đi du lịch cùng vợ con. Quang đã từng thử nhiều phương pháp giảm cân nhưng không thành công. Lần này, nhờ sự hỗ trợ từ các bác sĩ tại Bệnh viện Đa khoa Tâm Anh cùng chế độ ăn uống và vận động hợp lý, anh đã giảm được 15 kg chỉ sau hai tháng. Mục tiêu của Quang là giảm cân xuống dưới 100 kg để sống khỏe mạnh hơn.",
     "link": "https://vnexpress.net/chang-trai-nang-162-kg-quyet-giam-can-4863841.html",
@@ -2109,6 +2105,37 @@
       },
       {
         "text": "30 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
+    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
+    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
+    "answers": [
+      {
+        "text": "Viêm phổi do virus hợp bào hô hấp",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Viêm phế quản",
+        "correct": false
+      },
+      {
+        "text": "Viêm họng",
+        "correct": false
+      },
+      {
+        "text": "Sởi",
         "correct": false
       }
     ]
@@ -2662,6 +2689,60 @@
     ]
   },
   {
+    "title": "Sởi lây nhanh hơn cúm, bác sĩ khuyến cáo tiêm vaccine sớm",
+    "content": "Sởi có tốc độ lây lan rất nhanh, khả năng truyền nhiễm cao, khiến bác sĩ khuyến cáo tiêm vaccine sớm để bảo vệ sức khỏe cộng đồng. Vaccine sởi được chỉ định cho trẻ từ 9 tháng tuổi, nhưng hiện Bộ Y tế đã cho phép mở rộng độ tuổi tiêm ngừa sởi từ 6 tháng. Tỷ lệ tiêm chủng hiện nay thấp dưới 90% do ảnh hưởng của dịch Covid-19, trong khi Tổ chức Y tế Thế giới khuyến cáo cần đạt trên 95% để kiểm soát virus. Số ca mắc sởi đang gia tăng và các nhóm trẻ nhỏ là đối tượng có nguy cơ cao.",
+    "link": "https://vnexpress.net/soi-lay-nhanh-hon-cum-bac-si-khuyen-cao-tiem-vaccine-som-4863923.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 9,
+    "question": "Tại sao bác sĩ khuyến cáo tiêm vaccine sởi sớm?",
+    "answers": [
+      {
+        "text": "Để ngăn chặn sự lây lan nhanh chóng của virus sởi.",
+        "correct": true
+      },
+      {
+        "text": "Vì bệnh sởi không nguy hiểm như cúm.",
+        "correct": false
+      },
+      {
+        "text": "Vaccine sởi chỉ cần tiêm một lần.",
+        "correct": false
+      },
+      {
+        "text": "Để trẻ không bị sốt khi mắc bệnh.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "30 tuổi mới phát hiện mắc bệnh tim bẩm sinh",
+    "content": "Anh Tân, 31 tuổi, vừa phát hiện mắc bệnh hẹp eo động mạch chủ, một loại bệnh tim bẩm sinh, sau nhiều năm không có triệu chứng rõ ràng. Bệnh gây ra tình trạng tăng huyết áp kháng trị, và anh đã được can thiệp bằng cách đặt stent để giảm áp lực trong động mạch. Các bác sĩ cảnh báo rằng bệnh này có thể dẫn đến nhiều biến chứng nguy hiểm nếu không được theo dõi và điều trị kịp thời.",
+    "link": "https://vnexpress.net/30-tuoi-moi-phat-hien-mac-benh-tim-bam-sinh-4862869.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Anh Tân phát hiện bệnh gì khi 30 tuổi?",
+    "answers": [
+      {
+        "text": "Hẹp eo động mạch chủ",
+        "correct": true
+      },
+      {
+        "text": "Bệnh van tim ba mảnh",
+        "correct": false
+      },
+      {
+        "text": "Tăng huyết áp nguyên phát",
+        "correct": false
+      },
+      {
+        "text": "Bệnh mạch vành",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hôn nhân ngọt ngào của Á hậu Hong Kong trước khi chồng lộ ảnh ôm gái lạ",
     "content": "Hôn nhân của cựu Á hậu Hong Kong Hồ Hạnh Nhi đang trở thành tâm điểm chú ý khi chồng cô, doanh nhân Lý Thừa Đức, bị lộ ảnh ôm nhiều cô gái tại một quán bar. Dù bị nghi ngờ ngoại tình, Lý Thừa Đức khẳng định rằng những cái ôm chỉ là cách thể hiện tình cảm vui vẻ với bạn bè. Hồ Hạnh Nhi vẫn giữ im lặng về vụ việc nhưng đã từng chia sẻ rằng cô rất tự hào về cuộc sống gia đình ấm áp và hạnh phúc của mình.",
     "link": "https://dantri.com.vn/giai-tri/hon-nhan-ngot-ngao-cua-a-hau-hong-kong-truoc-khi-chong-lo-anh-om-gai-la-20250320100753906.htm",
@@ -2715,60 +2796,6 @@
       },
       {
         "text": "Sốt cao",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "30 tuổi mới phát hiện mắc bệnh tim bẩm sinh",
-    "content": "Anh Tân, 31 tuổi, vừa phát hiện mắc bệnh hẹp eo động mạch chủ, một loại bệnh tim bẩm sinh, sau nhiều năm không có triệu chứng rõ ràng. Bệnh gây ra tình trạng tăng huyết áp kháng trị, và anh đã được can thiệp bằng cách đặt stent để giảm áp lực trong động mạch. Các bác sĩ cảnh báo rằng bệnh này có thể dẫn đến nhiều biến chứng nguy hiểm nếu không được theo dõi và điều trị kịp thời.",
-    "link": "https://vnexpress.net/30-tuoi-moi-phat-hien-mac-benh-tim-bam-sinh-4862869.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Anh Tân phát hiện bệnh gì khi 30 tuổi?",
-    "answers": [
-      {
-        "text": "Hẹp eo động mạch chủ",
-        "correct": true
-      },
-      {
-        "text": "Bệnh van tim ba mảnh",
-        "correct": false
-      },
-      {
-        "text": "Tăng huyết áp nguyên phát",
-        "correct": false
-      },
-      {
-        "text": "Bệnh mạch vành",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sởi lây nhanh hơn cúm, bác sĩ khuyến cáo tiêm vaccine sớm",
-    "content": "Sởi có tốc độ lây lan rất nhanh, khả năng truyền nhiễm cao, khiến bác sĩ khuyến cáo tiêm vaccine sớm để bảo vệ sức khỏe cộng đồng. Vaccine sởi được chỉ định cho trẻ từ 9 tháng tuổi, nhưng hiện Bộ Y tế đã cho phép mở rộng độ tuổi tiêm ngừa sởi từ 6 tháng. Tỷ lệ tiêm chủng hiện nay thấp dưới 90% do ảnh hưởng của dịch Covid-19, trong khi Tổ chức Y tế Thế giới khuyến cáo cần đạt trên 95% để kiểm soát virus. Số ca mắc sởi đang gia tăng và các nhóm trẻ nhỏ là đối tượng có nguy cơ cao.",
-    "link": "https://vnexpress.net/soi-lay-nhanh-hon-cum-bac-si-khuyen-cao-tiem-vaccine-som-4863923.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 9,
-    "question": "Tại sao bác sĩ khuyến cáo tiêm vaccine sởi sớm?",
-    "answers": [
-      {
-        "text": "Để ngăn chặn sự lây lan nhanh chóng của virus sởi.",
-        "correct": true
-      },
-      {
-        "text": "Vì bệnh sởi không nguy hiểm như cúm.",
-        "correct": false
-      },
-      {
-        "text": "Vaccine sởi chỉ cần tiêm một lần.",
-        "correct": false
-      },
-      {
-        "text": "Để trẻ không bị sốt khi mắc bệnh.",
         "correct": false
       }
     ]
@@ -4968,60 +4995,6 @@
       },
       {
         "text": "Cô tìm kiếm thí sinh có vẻ đẹp giống mình.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "'Săn' cán bộ sau sắp xếp bộ máy",
-    "content": "Bài viết đề cập đến xu hướng các doanh nghiệp tại TP.HCM 'săn' cán bộ sau khi sắp xếp bộ máy nhà nước, nhằm tận dụng kinh nghiệm và kỹ năng của họ. Doanh nghiệp sẵn sàng trả mức lương cao cho những cán bộ này để cải thiện hiệu quả hoạt động. Các chuyên gia cho rằng đây là một chiến lược thông minh trong bối cảnh khó khăn hiện tại, giúp doanh nghiệp thích ứng tốt hơn với thủ tục hành chính và nâng cao năng lực quản lý.",
-    "link": "https://tuoitre.vn/san-can-bo-sau-sap-xep-bo-may-20250320140317875.htm",
-    "cat": "kinh-doanh",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao các doanh nghiệp ở TP.HCM lại 'săn' cán bộ sau sắp xếp bộ máy?",
-    "answers": [
-      {
-        "text": "Để tận dụng kinh nghiệm và kỹ năng của họ trong doanh nghiệp.",
-        "correct": true
-      },
-      {
-        "text": "Để giảm chi phí tuyển dụng.",
-        "correct": false
-      },
-      {
-        "text": "Để tăng cường nhân lực cho các dự án mới.",
-        "correct": false
-      },
-      {
-        "text": "Để thực hiện các thủ tục hành chính nhanh hơn.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phòng ngừa cận thị cho trẻ thế nào?",
-    "content": "Để phòng ngừa cận thị cho trẻ, việc ngồi đúng tư thế khi học bài và đọc sách là rất quan trọng. Hơn nữa, hạn chế thời gian xem các thiết bị điện tử cũng là một biện pháp hiệu quả. Những thói quen này giúp bảo vệ sức khỏe mắt của trẻ và giảm nguy cơ mắc cận thị.",
-    "link": "https://vnexpress.net/phong-ngua-can-thi-cho-tre-the-nao-4863773.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Làm thế nào để phòng ngừa cận thị cho trẻ?",
-    "answers": [
-      {
-        "text": "Ngồi đúng tư thế và hạn chế xem thiết bị điện tử.",
-        "correct": true
-      },
-      {
-        "text": "Không cần làm gì cả.",
-        "correct": false
-      },
-      {
-        "text": "Cho trẻ ăn nhiều đồ ngọt.",
-        "correct": false
-      },
-      {
-        "text": "Khuyến khích trẻ chơi game nhiều hơn.",
         "correct": false
       }
     ]
