Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -175,6 +175,33 @@
     ]
   },
   {
+    "title": "Nga cáo buộc Ukraine vi phạm lệnh ngừng bắn vào cơ sở năng lượng",
+    "content": "Bộ Ngoại giao Nga đã chỉ trích Ukraine vì vi phạm lệnh ngừng bắn được đề xuất bởi Mỹ khi thực hiện cuộc tấn công vào một kho dầu ở Krasnodar. Người phát ngôn Maria Zakharova cho rằng hành động này của Ukraine là một \"hành động khiêu khích\" và yêu cầu Mỹ phải giải quyết vấn đề này. Vụ tấn công đã gây ra hỏa hoạn lớn tại kho dầu, làm thương vong cho hai lính cứu hỏa và thiệt hại nghiêm trọng cho cơ sở này.",
+    "link": "https://dantri.com.vn/the-gioi/nga-cao-buoc-ukraine-vi-pham-lenh-ngung-ban-vao-co-so-nang-luong-20250321162436773.htm",
+    "cat": "the-gioi",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Ukraine đã vi phạm lệnh ngừng bắn như thế nào?",
+    "answers": [
+      {
+        "text": "Bằng cách tấn công vào kho dầu ở Krasnodar",
+        "correct": true
+      },
+      {
+        "text": "Bằng cách ngừng giao tranh hoàn toàn",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách yêu cầu Nga ngừng tấn công",
+        "correct": false
+      },
+      {
+        "text": "Bằng cách tham gia vào các cuộc đàm phán hòa bình",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Doanh nghiệp đổi mới sáng tạo mong vay vốn ngân hàng với lãi suất 0%",
     "content": "Doanh nghiệp tư nhân đang tìm kiếm hỗ trợ từ ngân hàng để vay vốn lãi suất 0% nhằm đầu tư vào đổi mới sáng tạo và công nghệ. Ông Nguyễn Kim Hùng, chủ tịch Tập đoàn Kim Nam, nhấn mạnh rằng ngân hàng là nguồn vốn thiết yếu cho doanh nghiệp và việc có chính sách hỗ trợ sẽ rút ngắn thời gian chuyển đổi công nghệ. Thống kê cho thấy dư nợ tín dụng cho doanh nghiệp tư nhân đã tăng đáng kể, nhưng nhiều doanh nghiệp vẫn gặp khó khăn trong việc tiếp cận vốn do quy mô nhỏ và thiếu tiềm lực tài chính.",
     "link": "https://tuoitre.vn/doanh-nghiep-doi-moi-sang-tao-mong-vay-von-ngan-hang-voi-lai-suat-0-20250321155341322.htm",
@@ -523,33 +550,6 @@
     ]
   },
   {
-    "title": "Đầu bếp người Nga lãnh án 18 năm tù vì giết đồng hương ở Bình Thuận",
-    "content": "Ngày 21-3, Tòa án nhân dân tỉnh Bình Thuận đã tuyên phạt Roman Nikiforow, 41 tuổi, quốc tịch Nga, 18 năm tù giam vì tội giết người. Trước đó, Roman và đồng hương Vasilii Echushin xảy ra mâu thuẫn, dẫn đến việc Roman dùng búa đánh chết Vasilii. Sau khi gây án, Roman đã phi tang thi thể của nạn nhân và xóa dấu vết tại hiện trường.",
-    "link": "https://tuoitre.vn/dau-bep-nguoi-nga-lanh-an-18-nam-tu-vi-giet-dong-huong-o-binh-thuan-20250321145201105.htm",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 7,
-    "question": "Tại sao Roman Nikiforow bị tuyên án 18 năm tù ở Bình Thuận?",
-    "answers": [
-      {
-        "text": "Vì tội giết người",
-        "correct": true
-      },
-      {
-        "text": "Vì trộm cắp tài sản",
-        "correct": false
-      },
-      {
-        "text": "Vì lừa đảo",
-        "correct": false
-      },
-      {
-        "text": "Vì hành hung người khác",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tái tạo lưỡi cho chàng trai ung thư",
     "content": "Chàng trai 26 tuổi ở TP HCM bị ung thư lưỡi trái và di căn hạch dưới hàm đã trải qua ca phẫu thuật cắt u và tái tạo lưỡi bằng vạt da ở đùi. Ca phẫu thuật diễn ra trong 8 giờ với sự tham gia của hai êkíp bác sĩ, cho phép khôi phục hình thể và chức năng lưỡi cho bệnh nhân. Sau phẫu thuật, bệnh nhân có thể đi lại và tập nuốt, cho thấy sự thành công trong việc phục hồi chức năng nói và nuốt.",
     "link": "https://vnexpress.net/tai-tao-luoi-cho-chang-trai-ung-thu-4863881.html",
@@ -572,6 +572,33 @@
       },
       {
         "text": "Bằng việc thay thế lưỡi bằng một bộ phận nhân tạo.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đầu bếp người Nga lãnh án 18 năm tù vì giết đồng hương ở Bình Thuận",
+    "content": "Ngày 21-3, Tòa án nhân dân tỉnh Bình Thuận đã tuyên phạt Roman Nikiforow, 41 tuổi, quốc tịch Nga, 18 năm tù giam vì tội giết người. Trước đó, Roman và đồng hương Vasilii Echushin xảy ra mâu thuẫn, dẫn đến việc Roman dùng búa đánh chết Vasilii. Sau khi gây án, Roman đã phi tang thi thể của nạn nhân và xóa dấu vết tại hiện trường.",
+    "link": "https://tuoitre.vn/dau-bep-nguoi-nga-lanh-an-18-nam-tu-vi-giet-dong-huong-o-binh-thuan-20250321145201105.htm",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 7,
+    "question": "Tại sao Roman Nikiforow bị tuyên án 18 năm tù ở Bình Thuận?",
+    "answers": [
+      {
+        "text": "Vì tội giết người",
+        "correct": true
+      },
+      {
+        "text": "Vì trộm cắp tài sản",
+        "correct": false
+      },
+      {
+        "text": "Vì lừa đảo",
+        "correct": false
+      },
+      {
+        "text": "Vì hành hung người khác",
         "correct": false
       }
     ]
@@ -1590,28 +1617,28 @@
     ]
   },
   {
-    "title": "5 cách bảo vệ thận",
-    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
-    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
+    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
+    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
+    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
+    "cat": "the-thao",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
     "answers": [
       {
-        "text": "Uống đủ nước và không uống rượu bia.",
+        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
         "correct": true
       },
       {
-        "text": "Tăng cường ăn mặn.",
+        "text": "Tham gia giải Grand Slam đầu tiên",
         "correct": false
       },
       {
-        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "text": "Được biết đến từ năm 2022",
         "correct": false
       },
       {
-        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
+        "text": "Giành huy chương vàng Olympic",
         "correct": false
       }
     ]
@@ -1648,6 +1675,33 @@
     ]
   },
   {
+    "title": "5 cách bảo vệ thận",
+    "content": "Bài viết đề cập đến 5 cách bảo vệ thận, bao gồm việc uống đủ nước để loại bỏ độc tố, tránh uống rượu bia và thuốc lá, khám sức khỏe định kỳ, duy trì lối sống lành mạnh và hạn chế lượng muối tiêu thụ. Việc chăm sóc thận rất quan trọng để ngăn ngừa suy thận và các bệnh liên quan. Những biện pháp này giúp nâng cao sức khỏe thận và phòng ngừa các bệnh nghiêm trọng.",
+    "link": "https://vnexpress.net/5-cach-bao-ve-than-4864069.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Làm thế nào để bảo vệ sức khỏe thận hiệu quả?",
+    "answers": [
+      {
+        "text": "Uống đủ nước và không uống rượu bia.",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường ăn mặn.",
+        "correct": false
+      },
+      {
+        "text": "Không cần kiểm tra sức khỏe định kỳ.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
     "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
     "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
@@ -1670,33 +1724,6 @@
       },
       {
         "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hành trình Andreeva 'xé mác' thần đồng quần vợt",
-    "content": "Mirra Andreeva, một tay vợt trẻ người Nga, đã nhanh chóng vươn lên trong làng quần vợt thế giới, từ một tài năng trẻ trở thành một trong những tay vợt nữ hàng đầu. Cô nổi bật từ giữa năm 2023 và đạt được nhiều thành công ấn tượng trong mùa giải 2024, bao gồm chiến thắng trước những tên tuổi lớn như Ons Jabeur và Aryna Sabalenka. Bên cạnh tài năng trên sân, Andreeva còn nổi bật với sự điềm tĩnh và khả năng nghiên cứu đối thủ, cho thấy cô không chỉ là một thần đồng mà còn là một tay vợt có tiềm năng phát triển bền vững.",
-    "link": "https://vnexpress.net/hanh-trinh-andreeva-xe-mac-than-dong-quan-vot-4863771.html",
-    "cat": "the-thao",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Mirra Andreeva đã có những thành tích nào nổi bật trong quần vợt?",
-    "answers": [
-      {
-        "text": "Chiến thắng trước Ons Jabeur và Aryna Sabalenka",
-        "correct": true
-      },
-      {
-        "text": "Tham gia giải Grand Slam đầu tiên",
-        "correct": false
-      },
-      {
-        "text": "Được biết đến từ năm 2022",
-        "correct": false
-      },
-      {
-        "text": "Giành huy chương vàng Olympic",
         "correct": false
       }
     ]
@@ -2154,33 +2181,6 @@
     ]
   },
   {
-    "title": "Vinmec đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài",
-    "content": "Hệ thống y tế Vinmec vừa được chỉ định đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài theo báo cáo từ Indochina Research Vietnam. Vinmec có mức độ nhận diện cao nhất với 67%, vượt xa các bệnh viện khác như Family Medical Practice và Bệnh viện Việt Pháp. Báo cáo chỉ ra rằng trình độ bác sĩ, chất lượng cơ sở vật chất và sự tận tâm trong chăm sóc bệnh nhân là những yếu tố chính mà người nước ngoài quan tâm khi chọn dịch vụ y tế tại Việt Nam. Vinmec cam kết không ngừng cải thiện dịch vụ và nâng cao trải nghiệm khách hàng.",
-    "link": "https://vnexpress.net/vinmec-dung-dau-viet-nam-ve-dich-vu-y-te-danh-cho-nguoi-nuoc-ngoai-4863986.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Vinmec đứng đầu về dịch vụ y tế nào tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Dịch vụ y tế dành cho người nước ngoài",
-        "correct": true
-      },
-      {
-        "text": "Dịch vụ y tế dành cho người Việt",
-        "correct": false
-      },
-      {
-        "text": "Dịch vụ y tế dành cho trẻ em",
-        "correct": false
-      },
-      {
-        "text": "Dịch vụ y tế dành cho người cao tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người mẹ quyết giữ thai nhi dị tật não",
     "content": "Chị Hồi, 41 tuổi, quyết định giữ thai nhi bị dị tật não úng thủy sau khi siêu âm ở tuần 25 thai kỳ. Dù được bác sĩ cảnh báo về tình trạng thai nhi thiểu sản thể chai, chị vẫn kiên định nuôi dưỡng con. Sau khi sinh, bé trai chào đời với cân nặng 3,8 kg và được can thiệp dẫn lưu dịch não tủy, hiện có những tiến triển khả quan về thần kinh. Bác sĩ cho biết, trẻ có dị tật não cần được chăm sóc y tế suốt đời để cải thiện chất lượng cuộc sống.",
     "link": "https://vnexpress.net/nguoi-me-quyet-giu-thai-nhi-di-tat-nao-4863938.html",
@@ -2203,6 +2203,33 @@
       },
       {
         "text": "Vì chị không biết về tình trạng của thai nhi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vinmec đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài",
+    "content": "Hệ thống y tế Vinmec vừa được chỉ định đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài theo báo cáo từ Indochina Research Vietnam. Vinmec có mức độ nhận diện cao nhất với 67%, vượt xa các bệnh viện khác như Family Medical Practice và Bệnh viện Việt Pháp. Báo cáo chỉ ra rằng trình độ bác sĩ, chất lượng cơ sở vật chất và sự tận tâm trong chăm sóc bệnh nhân là những yếu tố chính mà người nước ngoài quan tâm khi chọn dịch vụ y tế tại Việt Nam. Vinmec cam kết không ngừng cải thiện dịch vụ và nâng cao trải nghiệm khách hàng.",
+    "link": "https://vnexpress.net/vinmec-dung-dau-viet-nam-ve-dich-vu-y-te-danh-cho-nguoi-nuoc-ngoai-4863986.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Vinmec đứng đầu về dịch vụ y tế nào tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Dịch vụ y tế dành cho người nước ngoài",
+        "correct": true
+      },
+      {
+        "text": "Dịch vụ y tế dành cho người Việt",
+        "correct": false
+      },
+      {
+        "text": "Dịch vụ y tế dành cho trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Dịch vụ y tế dành cho người cao tuổi",
         "correct": false
       }
     ]
