--- a/home.html
+++ b/home.html
@@ -229,6 +229,33 @@
     ]
   },
   {
+    "title": "Đỗ Thị Hà tuổi 24: CEO sang chảnh, vướng tin đồn yêu thiếu gia \"nghìn tỷ\"",
+    "content": "Đỗ Thị Hà, Hoa hậu Việt Nam 2020, hiện tại 24 tuổi, đang xây dựng hình ảnh của một nữ doanh nhân thành đạt với vai trò CEO của một thẩm mỹ viện quốc tế. Mặc dù có tin đồn hẹn hò với một thiếu gia giàu có, cô vẫn giữ kín thông tin cá nhân và không có kế hoạch kết hôn trong thời gian tới. Cô cũng tập trung vào việc phát triển sự nghiệp và hoàn thiện bản thân, đồng thời thường xuyên chia sẻ cuộc sống thường nhật qua mạng xã hội.",
+    "link": "https://dantri.com.vn/giai-tri/do-thi-ha-tuoi-24-ceo-sang-chanh-vuong-tin-don-yeu-thieu-gia-nghin-ty-20250320151713931.htm",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Đỗ Thị Hà hiện đang làm gì ở tuổi 24?",
+    "answers": [
+      {
+        "text": "Cô là CEO của một thẩm mỹ viện quốc tế.",
+        "correct": true
+      },
+      {
+        "text": "Cô đang học thạc sĩ ngành luật.",
+        "correct": false
+      },
+      {
+        "text": "Cô đã giải thể công ty mỹ phẩm.",
+        "correct": false
+      },
+      {
+        "text": "Cô đang chuẩn bị kết hôn.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xôn xao cách tuyển quân bằng hamburger của Ukraine",
     "content": "Quân đội Ukraine đã triển khai một chiến dịch tuyển quân độc đáo bằng cách sử dụng đồ ăn nhanh như bánh hamburger để thu hút tân binh. Một video từ Bộ Quốc phòng Ukraine cho thấy, những người trong độ tuổi 18-24 có thể nhận được số tiền tương đương 24.000 USD nếu họ ký hợp đồng phục vụ trong quân đội. Điều này diễn ra trong bối cảnh chính phủ Ukraine đang đối mặt với tình trạng trốn nghĩa vụ quân sự và cần thêm quân số để đối phó với cuộc xung đột kéo dài với Nga.",
     "link": "https://dantri.com.vn/the-gioi/xon-xao-cach-tuyen-quan-bang-hamburger-cua-ukraine-20250321160606446.htm",
@@ -1327,37 +1354,6 @@
     ]
   },
   {
-    "title": "Nguy cơ viêm khớp sau chấn thương",
-    "content": "Viêm khớp sau chấn thương là một tình trạng khá phổ biến và thường tự hồi phục sau 2-3 tháng. Tuy nhiên, trong một số trường hợp, tình trạng này có thể kéo dài hoặc phát triển nặng hơn, gây ra nhiều biến chứng nghiêm trọng như nhiễm trùng khớp hay teo cơ. Các triệu chứng của viêm khớp bao gồm đau nhức, sưng, và khó cử động, do đó người bệnh cần thăm khám kịp thời để được điều trị thích hợp.",
-    "link": "https://vnexpress.net/nguy-co-viem-khop-sau-chan-thuong-4864110.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Viêm khớp sau chấn thương có thể kéo dài bao lâu?",
-    "answers": [
-      {
-        "text": "2-3 tháng",
-        "correct": true
-      },
-      {
-        "text": "1-2 tuần",
-        "correct": false
-      },
-      {
-        "text": "6 tháng",
-        "correct": false
-      },
-      {
-        "text": "Vĩnh viễn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ vài ngày",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
     "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
     "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
@@ -1384,6 +1380,37 @@
       },
       {
         "text": "Hạn chế ăn uống",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nguy cơ viêm khớp sau chấn thương",
+    "content": "Viêm khớp sau chấn thương là một tình trạng khá phổ biến và thường tự hồi phục sau 2-3 tháng. Tuy nhiên, trong một số trường hợp, tình trạng này có thể kéo dài hoặc phát triển nặng hơn, gây ra nhiều biến chứng nghiêm trọng như nhiễm trùng khớp hay teo cơ. Các triệu chứng của viêm khớp bao gồm đau nhức, sưng, và khó cử động, do đó người bệnh cần thăm khám kịp thời để được điều trị thích hợp.",
+    "link": "https://vnexpress.net/nguy-co-viem-khop-sau-chan-thuong-4864110.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Viêm khớp sau chấn thương có thể kéo dài bao lâu?",
+    "answers": [
+      {
+        "text": "2-3 tháng",
+        "correct": true
+      },
+      {
+        "text": "1-2 tuần",
+        "correct": false
+      },
+      {
+        "text": "6 tháng",
+        "correct": false
+      },
+      {
+        "text": "Vĩnh viễn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ vài ngày",
         "correct": false
       }
     ]
@@ -1953,37 +1980,6 @@
     ]
   },
   {
-    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
-    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
-    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
-    "answers": [
-      {
-        "text": "Viêm phổi do virus hợp bào hô hấp",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm phế quản",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Sởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chàng trai nặng 162 kg quyết giảm cân",
     "content": "Chàng trai 24 tuổi tên Quang, nặng 162 kg, đang quyết tâm giảm cân để cải thiện sức khỏe và có thể đi du lịch cùng vợ con. Quang đã từng thử nhiều phương pháp giảm cân nhưng không thành công. Lần này, nhờ sự hỗ trợ từ các bác sĩ tại Bệnh viện Đa khoa Tâm Anh cùng chế độ ăn uống và vận động hợp lý, anh đã giảm được 15 kg chỉ sau hai tháng. Mục tiêu của Quang là giảm cân xuống dưới 100 kg để sống khỏe mạnh hơn.",
     "link": "https://vnexpress.net/chang-trai-nang-162-kg-quyet-giam-can-4863841.html",
@@ -2010,6 +2006,37 @@
       },
       {
         "text": "30 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
+    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
+    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
+    "answers": [
+      {
+        "text": "Viêm phổi do virus hợp bào hô hấp",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Viêm phế quản",
+        "correct": false
+      },
+      {
+        "text": "Viêm họng",
+        "correct": false
+      },
+      {
+        "text": "Sởi",
         "correct": false
       }
     ]
@@ -2536,6 +2563,33 @@
     ]
   },
   {
+    "title": "Hôn nhân ngọt ngào của Á hậu Hong Kong trước khi chồng lộ ảnh ôm gái lạ",
+    "content": "Hôn nhân của cựu Á hậu Hong Kong Hồ Hạnh Nhi đang trở thành tâm điểm chú ý khi chồng cô, doanh nhân Lý Thừa Đức, bị lộ ảnh ôm nhiều cô gái tại một quán bar. Dù bị nghi ngờ ngoại tình, Lý Thừa Đức khẳng định rằng những cái ôm chỉ là cách thể hiện tình cảm vui vẻ với bạn bè. Hồ Hạnh Nhi vẫn giữ im lặng về vụ việc nhưng đã từng chia sẻ rằng cô rất tự hào về cuộc sống gia đình ấm áp và hạnh phúc của mình.",
+    "link": "https://dantri.com.vn/giai-tri/hon-nhan-ngot-ngao-cua-a-hau-hong-kong-truoc-khi-chong-lo-anh-om-gai-la-20250320100753906.htm",
+    "cat": "giai-tri",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Hồ Hạnh Nhi phản ứng ra sao trước vụ lùm xùm chồng ôm gái lạ?",
+    "answers": [
+      {
+        "text": "Cô giữ im lặng và tập trung vào công việc và chăm sóc các con.",
+        "correct": true
+      },
+      {
+        "text": "Cô đã lên tiếng chỉ trích chồng.",
+        "correct": false
+      },
+      {
+        "text": "Cô yêu cầu chồng xin lỗi công chúng.",
+        "correct": false
+      },
+      {
+        "text": "Cô tổ chức một buổi họp báo để giải thích sự việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "30 tuổi mới phát hiện mắc bệnh tim bẩm sinh",
     "content": "Anh Tân, 31 tuổi, vừa phát hiện mắc bệnh hẹp eo động mạch chủ, một loại bệnh tim bẩm sinh, sau nhiều năm không có triệu chứng rõ ràng. Bệnh gây ra tình trạng tăng huyết áp kháng trị, và anh đã được can thiệp bằng cách đặt stent để giảm áp lực trong động mạch. Các bác sĩ cảnh báo rằng bệnh này có thể dẫn đến nhiều biến chứng nguy hiểm nếu không được theo dõi và điều trị kịp thời.",
     "link": "https://vnexpress.net/30-tuoi-moi-phat-hien-mac-benh-tim-bam-sinh-4862869.html",
@@ -2621,33 +2675,6 @@
     ]
   },
   {
-    "title": "Hôn nhân ngọt ngào của Á hậu Hong Kong trước khi chồng lộ ảnh ôm gái lạ",
-    "content": "Hôn nhân của cựu Á hậu Hong Kong Hồ Hạnh Nhi đang trở thành tâm điểm chú ý khi chồng cô, doanh nhân Lý Thừa Đức, bị lộ ảnh ôm nhiều cô gái tại một quán bar. Dù bị nghi ngờ ngoại tình, Lý Thừa Đức khẳng định rằng những cái ôm chỉ là cách thể hiện tình cảm vui vẻ với bạn bè. Hồ Hạnh Nhi vẫn giữ im lặng về vụ việc nhưng đã từng chia sẻ rằng cô rất tự hào về cuộc sống gia đình ấm áp và hạnh phúc của mình.",
-    "link": "https://dantri.com.vn/giai-tri/hon-nhan-ngot-ngao-cua-a-hau-hong-kong-truoc-khi-chong-lo-anh-om-gai-la-20250320100753906.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Hồ Hạnh Nhi phản ứng ra sao trước vụ lùm xùm chồng ôm gái lạ?",
-    "answers": [
-      {
-        "text": "Cô giữ im lặng và tập trung vào công việc và chăm sóc các con.",
-        "correct": true
-      },
-      {
-        "text": "Cô đã lên tiếng chỉ trích chồng.",
-        "correct": false
-      },
-      {
-        "text": "Cô yêu cầu chồng xin lỗi công chúng.",
-        "correct": false
-      },
-      {
-        "text": "Cô tổ chức một buổi họp báo để giải thích sự việc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Mỹ trục xuất cầu thủ xăm biểu tượng Real Madrid",
     "content": "Cầu thủ bóng đá Jerce Reyes Barrios, 26 tuổi, đã bị trục xuất khỏi Mỹ do bị cáo buộc là thành viên băng đảng bạo lực, liên quan đến hình xăm biểu tượng Real Madrid của anh. Dù đã có phiên điều trần về nhập cư, anh cùng hơn 200 người khác đã bị đưa về El Salvador vào ngày 15/3/2025. Luật sư của Barrios khẳng định hình xăm của anh chỉ mang ý nghĩa bóng đá và gia đình, không liên quan đến băng đảng. Quyết định trục xuất này đã gây ra nhiều tranh cãi và phản đối từ gia đình và luật sư của anh.",
     "link": "https://vnexpress.net/my-truc-xuat-cau-thu-xam-bieu-tuong-real-madrid-4863991.html",
@@ -2675,33 +2702,6 @@
     ]
   },
   {
-    "title": "Đâm đuôi xe tải, hai người tử vong",
-    "content": "Vào sáng ngày 21/3, một vụ tai nạn nghiêm trọng đã xảy ra trên quốc lộ 25, tỉnh Phú Yên khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng vì hư hỏng. Cú va chạm mạnh làm phần đầu xe tải của anh Khoanh biến dạng và hai người trên xe đã bị mắc kẹt trong cabin, dẫn đến tử vong. Lực lượng cứu hộ đã phải mất gần một tiếng đồng hồ để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân của tai nạn vẫn đang được điều tra.",
-    "link": "https://vnexpress.net/dam-duoi-xe-tai-hai-nguoi-tu-vong-4864002.html",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 8,
-    "question": "Tại sao hai người lại tử vong trong vụ tai nạn xe tải ở Phú Yên?",
-    "answers": [
-      {
-        "text": "Do bị mắc kẹt trong cabin sau khi đâm vào xe khác.",
-        "correct": true
-      },
-      {
-        "text": "Vì xe tải bị lật vào mương.",
-        "correct": false
-      },
-      {
-        "text": "Do tài xế không có giấy phép lái xe.",
-        "correct": false
-      },
-      {
-        "text": "Vì xe tải chạy quá tốc độ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Xe tải đâm nhau, hai người chết",
     "content": "Sáng 21/3, tại xã Suối Bạc, huyện Sơn Hòa, Phú Yên, một vụ tai nạn nghiêm trọng đã xảy ra khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng do hư hỏng. Cú tông mạnh đã khiến phần đầu xe tải biến dạng hoàn toàn, hai người trong xe bị mắc kẹt và tử vong tại chỗ. Lực lượng cứu hộ đã có mặt để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân vụ tai nạn đang được điều tra.",
     "link": "https://vnexpress.net/xe-tai-dam-nhau-hai-nguoi-chet-4864002.html",
@@ -2724,6 +2724,33 @@
       },
       {
         "text": "Tài xế bị phạt tiền",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đâm đuôi xe tải, hai người tử vong",
+    "content": "Vào sáng ngày 21/3, một vụ tai nạn nghiêm trọng đã xảy ra trên quốc lộ 25, tỉnh Phú Yên khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng vì hư hỏng. Cú va chạm mạnh làm phần đầu xe tải của anh Khoanh biến dạng và hai người trên xe đã bị mắc kẹt trong cabin, dẫn đến tử vong. Lực lượng cứu hộ đã phải mất gần một tiếng đồng hồ để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân của tai nạn vẫn đang được điều tra.",
+    "link": "https://vnexpress.net/dam-duoi-xe-tai-hai-nguoi-tu-vong-4864002.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tại sao hai người lại tử vong trong vụ tai nạn xe tải ở Phú Yên?",
+    "answers": [
+      {
+        "text": "Do bị mắc kẹt trong cabin sau khi đâm vào xe khác.",
+        "correct": true
+      },
+      {
+        "text": "Vì xe tải bị lật vào mương.",
+        "correct": false
+      },
+      {
+        "text": "Do tài xế không có giấy phép lái xe.",
+        "correct": false
+      },
+      {
+        "text": "Vì xe tải chạy quá tốc độ.",
         "correct": false
       }
     ]
