--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,33 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "8 bước lên dây cót tinh thần trước ngày chạy giải",
+    "content": "Bài viết hướng dẫn runner 8 bước chuẩn bị tinh thần trước ngày chạy giải, bao gồm việc đặt mục tiêu rõ ràng, công nhận tiến bộ, xác định ý nghĩa thành công và duy trì tư duy tích cực. Thời điểm 2-3 tuần trước ngày đua rất quan trọng, cần chú ý đến cả thể chất và tâm lý. Những mẹo hữu ích giúp runner tăng cường động lực và cải thiện hiệu suất trong cuộc đua sắp tới.",
+    "link": "https://vnexpress.net/8-buoc-len-day-cot-tinh-than-truoc-ngay-chay-giai-4864017.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Có những bước nào giúp runner chuẩn bị tinh thần trước ngày chạy giải?",
+    "answers": [
+      {
+        "text": "Đặt mục tiêu rõ ràng và duy trì tư duy tích cực",
+        "correct": true
+      },
+      {
+        "text": "Chỉ tập trung vào tốc độ chạy",
+        "correct": false
+      },
+      {
+        "text": "Tránh gặp gỡ bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Không cần lên kế hoạch tập luyện",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vụ căn nhà ở quận 7 bị ép đấu giá rẻ mạt: Xóa tên luật sư Tấn Khoa vì lừa dối khách hàng",
     "content": "Đoàn luật sư TP.HCM đã kỷ luật và xóa tên luật sư Bùi Việt Tấn Khoa do lừa dối khách hàng trong vụ căn nhà ở quận 7. Ông Khoa đã nhận tổng cộng 5 tỉ đồng từ bà L.T.K.C. để yêu cầu thanh tra vụ đấu giá căn nhà nhưng không ký hợp đồng dịch vụ pháp lý và có nhiều hành vi mờ ám. Căn nhà này đã bị bán đấu giá với giá rẻ, dẫn đến cáo buộc về sự thông đồng trong quá trình đấu giá.",
     "link": "https://tuoitre.vn/vu-can-nha-o-quan-7-bi-ep-dau-gia-re-mat-xoa-ten-luat-su-tan-khoa-vi-lua-doi-khach-hang-20250321134455346.htm",
@@ -1372,37 +1399,6 @@
     ]
   },
   {
-    "title": "Nguy cơ viêm khớp sau chấn thương",
-    "content": "Viêm khớp sau chấn thương là một tình trạng khá phổ biến và thường tự hồi phục sau 2-3 tháng. Tuy nhiên, trong một số trường hợp, tình trạng này có thể kéo dài hoặc phát triển nặng hơn, gây ra nhiều biến chứng nghiêm trọng như nhiễm trùng khớp hay teo cơ. Các triệu chứng của viêm khớp bao gồm đau nhức, sưng, và khó cử động, do đó người bệnh cần thăm khám kịp thời để được điều trị thích hợp.",
-    "link": "https://vnexpress.net/nguy-co-viem-khop-sau-chan-thuong-4864110.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Viêm khớp sau chấn thương có thể kéo dài bao lâu?",
-    "answers": [
-      {
-        "text": "2-3 tháng",
-        "correct": true
-      },
-      {
-        "text": "1-2 tuần",
-        "correct": false
-      },
-      {
-        "text": "6 tháng",
-        "correct": false
-      },
-      {
-        "text": "Vĩnh viễn",
-        "correct": false
-      },
-      {
-        "text": "Chỉ vài ngày",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Làm gì cắt cơn ho mà không dùng thuốc?",
     "content": "Ho dai dẳng có thể gây khó chịu, đặc biệt là vào ban đêm. Để giảm triệu chứng ho mà không cần dùng thuốc, một số phương pháp tự nhiên và thảo dược có thể được áp dụng. Bài viết đề xuất những cách thức hiệu quả để giúp cắt cơn ho mà vẫn an toàn cho sức khỏe.",
     "link": "https://vnexpress.net/lam-gi-cat-con-ho-ma-khong-dung-thuoc-4864094.html",
@@ -1429,6 +1425,37 @@
       },
       {
         "text": "Hạn chế ăn uống",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nguy cơ viêm khớp sau chấn thương",
+    "content": "Viêm khớp sau chấn thương là một tình trạng khá phổ biến và thường tự hồi phục sau 2-3 tháng. Tuy nhiên, trong một số trường hợp, tình trạng này có thể kéo dài hoặc phát triển nặng hơn, gây ra nhiều biến chứng nghiêm trọng như nhiễm trùng khớp hay teo cơ. Các triệu chứng của viêm khớp bao gồm đau nhức, sưng, và khó cử động, do đó người bệnh cần thăm khám kịp thời để được điều trị thích hợp.",
+    "link": "https://vnexpress.net/nguy-co-viem-khop-sau-chan-thuong-4864110.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Viêm khớp sau chấn thương có thể kéo dài bao lâu?",
+    "answers": [
+      {
+        "text": "2-3 tháng",
+        "correct": true
+      },
+      {
+        "text": "1-2 tuần",
+        "correct": false
+      },
+      {
+        "text": "6 tháng",
+        "correct": false
+      },
+      {
+        "text": "Vĩnh viễn",
+        "correct": false
+      },
+      {
+        "text": "Chỉ vài ngày",
         "correct": false
       }
     ]
@@ -1662,33 +1689,6 @@
     ]
   },
   {
-    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
-    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
-    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
-    "cat": "suc-khoe",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
-    "answers": [
-      {
-        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
-        "correct": true
-      },
-      {
-        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
-        "correct": false
-      },
-      {
-        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
-        "correct": false
-      },
-      {
-        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "5 thực phẩm có thể khiến não nhanh lão hóa",
     "content": "Bài viết đề cập đến 5 loại thực phẩm có thể làm gia tăng tốc độ lão hóa của não, bao gồm thực phẩm chế biến sẵn, đường, chất béo bão hòa và carbohydrate tinh chế. Những thực phẩm này không chỉ làm suy yếu chức năng não mà còn gây viêm, rối loạn chức năng nhận thức. Các loại thịt đỏ và thịt chế biến cũng nằm trong danh sách, do chứa nhiều chất bảo quản và chất béo bão hòa. Cuối cùng, việc tiêu thụ rượu bia cũng được nhấn mạnh là có hại cho não và có thể làm giảm thể tích não.",
     "link": "https://vnexpress.net/5-thuc-pham-co-the-khien-nao-nhanh-lao-hoa-4864059.html",
@@ -1742,6 +1742,33 @@
       },
       {
         "text": "Chỉ cần tập thể dục một lần mỗi tháng.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "4 việc làm gây hại tim mạch trong mùa nắng nóng",
+    "content": "Trong mùa nắng nóng, có bốn việc làm gây hại cho tim mạch mà mọi người cần tránh. Đó là tiếp xúc nhiệt cao đột ngột, uống nhiều rượu bia và cà phê, ăn mặn cùng thực phẩm chế biến sẵn, và lười vận động hoặc tập thể dục quá sức. Những hành động này có thể dẫn đến các vấn đề nghiêm trọng như đột quỵ, nhồi máu cơ tim và các triệu chứng như chóng mặt, khó thở.",
+    "link": "https://vnexpress.net/4-viec-lam-gay-hai-tim-mach-trong-mua-nang-nong-4863752.html",
+    "cat": "suc-khoe",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Những việc làm nào gây hại cho tim mạch trong mùa nắng nóng?",
+    "answers": [
+      {
+        "text": "Tiếp xúc nhiệt cao đột ngột, uống rượu bia, ăn mặn, lười vận động",
+        "correct": true
+      },
+      {
+        "text": "Tắm nước lạnh, ngủ đủ giấc, ăn nhiều rau xanh",
+        "correct": false
+      },
+      {
+        "text": "Đi bộ thường xuyên, uống đủ nước, tránh nắng",
+        "correct": false
+      },
+      {
+        "text": "Chơi thể thao ngoài trời, ăn nhiều trái cây, tránh đồ ngọt",
         "correct": false
       }
     ]
@@ -1998,37 +2025,6 @@
     ]
   },
   {
-    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
-    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
-    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
-    "answers": [
-      {
-        "text": "Viêm phổi do virus hợp bào hô hấp",
-        "correct": true
-      },
-      {
-        "text": "Cúm",
-        "correct": false
-      },
-      {
-        "text": "Viêm phế quản",
-        "correct": false
-      },
-      {
-        "text": "Viêm họng",
-        "correct": false
-      },
-      {
-        "text": "Sởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chàng trai nặng 162 kg quyết giảm cân",
     "content": "Chàng trai 24 tuổi tên Quang, nặng 162 kg, đang quyết tâm giảm cân để cải thiện sức khỏe và có thể đi du lịch cùng vợ con. Quang đã từng thử nhiều phương pháp giảm cân nhưng không thành công. Lần này, nhờ sự hỗ trợ từ các bác sĩ tại Bệnh viện Đa khoa Tâm Anh cùng chế độ ăn uống và vận động hợp lý, anh đã giảm được 15 kg chỉ sau hai tháng. Mục tiêu của Quang là giảm cân xuống dưới 100 kg để sống khỏe mạnh hơn.",
     "link": "https://vnexpress.net/chang-trai-nang-162-kg-quyet-giam-can-4863841.html",
@@ -2055,6 +2051,37 @@
       },
       {
         "text": "30 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Bé sơ sinh viêm phổi do virus hợp bào hô hấp",
+    "content": "Bé gái 22 ngày tuổi bị viêm phổi do virus hợp bào hô hấp (RSV) đã nhập viện trong tình trạng nghiêm trọng. Bé sinh non ở tuần 35 và đã có triệu chứng thở mệt, bú kém từ khi sinh. Sau khi điều trị tại Bệnh viện Đa khoa Tâm Anh TP HCM với các biện pháp như thở áp lực dương, hút đờm và sử dụng kháng sinh, tình trạng của bé đã cải thiện và được xuất viện sau hai tuần. Các bác sĩ nhấn mạnh trẻ sinh non có nguy cơ mắc viêm phổi RSV cao hơn trẻ đủ tháng, do đó cần có biện pháp phòng ngừa thích hợp.",
+    "link": "https://vnexpress.net/be-so-sinh-viem-phoi-do-virus-hop-bao-ho-hap-4863942.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bé gái 22 ngày tuổi bị bệnh gì khi nhập viện?",
+    "answers": [
+      {
+        "text": "Viêm phổi do virus hợp bào hô hấp",
+        "correct": true
+      },
+      {
+        "text": "Cúm",
+        "correct": false
+      },
+      {
+        "text": "Viêm phế quản",
+        "correct": false
+      },
+      {
+        "text": "Viêm họng",
+        "correct": false
+      },
+      {
+        "text": "Sởi",
         "correct": false
       }
     ]
@@ -2226,33 +2253,6 @@
     ]
   },
   {
-    "title": "Vinmec đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài",
-    "content": "Hệ thống y tế Vinmec vừa được chỉ định đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài theo báo cáo từ Indochina Research Vietnam. Vinmec có mức độ nhận diện cao nhất với 67%, vượt xa các bệnh viện khác như Family Medical Practice và Bệnh viện Việt Pháp. Báo cáo chỉ ra rằng trình độ bác sĩ, chất lượng cơ sở vật chất và sự tận tâm trong chăm sóc bệnh nhân là những yếu tố chính mà người nước ngoài quan tâm khi chọn dịch vụ y tế tại Việt Nam. Vinmec cam kết không ngừng cải thiện dịch vụ và nâng cao trải nghiệm khách hàng.",
-    "link": "https://vnexpress.net/vinmec-dung-dau-viet-nam-ve-dich-vu-y-te-danh-cho-nguoi-nuoc-ngoai-4863986.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Vinmec đứng đầu về dịch vụ y tế nào tại Việt Nam?",
-    "answers": [
-      {
-        "text": "Dịch vụ y tế dành cho người nước ngoài",
-        "correct": true
-      },
-      {
-        "text": "Dịch vụ y tế dành cho người Việt",
-        "correct": false
-      },
-      {
-        "text": "Dịch vụ y tế dành cho trẻ em",
-        "correct": false
-      },
-      {
-        "text": "Dịch vụ y tế dành cho người cao tuổi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Người mẹ quyết giữ thai nhi dị tật não",
     "content": "Chị Hồi, 41 tuổi, quyết định giữ thai nhi bị dị tật não úng thủy sau khi siêu âm ở tuần 25 thai kỳ. Dù được bác sĩ cảnh báo về tình trạng thai nhi thiểu sản thể chai, chị vẫn kiên định nuôi dưỡng con. Sau khi sinh, bé trai chào đời với cân nặng 3,8 kg và được can thiệp dẫn lưu dịch não tủy, hiện có những tiến triển khả quan về thần kinh. Bác sĩ cho biết, trẻ có dị tật não cần được chăm sóc y tế suốt đời để cải thiện chất lượng cuộc sống.",
     "link": "https://vnexpress.net/nguoi-me-quyet-giu-thai-nhi-di-tat-nao-4863938.html",
@@ -2275,6 +2275,33 @@
       },
       {
         "text": "Vì chị không biết về tình trạng của thai nhi.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Vinmec đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài",
+    "content": "Hệ thống y tế Vinmec vừa được chỉ định đứng đầu Việt Nam về dịch vụ y tế dành cho người nước ngoài theo báo cáo từ Indochina Research Vietnam. Vinmec có mức độ nhận diện cao nhất với 67%, vượt xa các bệnh viện khác như Family Medical Practice và Bệnh viện Việt Pháp. Báo cáo chỉ ra rằng trình độ bác sĩ, chất lượng cơ sở vật chất và sự tận tâm trong chăm sóc bệnh nhân là những yếu tố chính mà người nước ngoài quan tâm khi chọn dịch vụ y tế tại Việt Nam. Vinmec cam kết không ngừng cải thiện dịch vụ và nâng cao trải nghiệm khách hàng.",
+    "link": "https://vnexpress.net/vinmec-dung-dau-viet-nam-ve-dich-vu-y-te-danh-cho-nguoi-nuoc-ngoai-4863986.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Vinmec đứng đầu về dịch vụ y tế nào tại Việt Nam?",
+    "answers": [
+      {
+        "text": "Dịch vụ y tế dành cho người nước ngoài",
+        "correct": true
+      },
+      {
+        "text": "Dịch vụ y tế dành cho người Việt",
+        "correct": false
+      },
+      {
+        "text": "Dịch vụ y tế dành cho trẻ em",
+        "correct": false
+      },
+      {
+        "text": "Dịch vụ y tế dành cho người cao tuổi",
         "correct": false
       }
     ]
@@ -3296,33 +3323,6 @@
     ]
   },
   {
-    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
-    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
-    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
-    "answers": [
-      {
-        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
-        "correct": true
-      },
-      {
-        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Có nên loại bỏ lớp váng bọt nổi trên nồi lẩu?",
     "content": "Khi chế biến món lẩu, lớp bọt nổi trên bề mặt thường do protein, chất béo và khoáng chất trong thực phẩm gây ra. Việc loại bỏ lớp bọt này không cần thiết vì không gây hại và còn có thể làm mất đi một phần protein. Tuy nhiên, cần phân biệt giữa bọt bình thường và bọt do thực phẩm không đảm bảo chất lượng. Nếu bọt có màu sắc bất thường hoặc vón cục lớn, có thể là dấu hiệu thực phẩm không an toàn. Tổng quan, lớp bọt trắng nhỏ không ảnh hưởng đến chất lượng món ăn và có thể giữ lại.",
     "link": "https://vnexpress.net/co-nen-loai-bo-lop-vang-bot-noi-tren-noi-lau-4863369.html",
@@ -3372,6 +3372,33 @@
       },
       {
         "text": "Học sinh phải đóng quỹ nhưng số tiền thấp hơn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Nổ' thực phẩm chức năng như thuốc chữa bệnh",
+    "content": "Bài viết chỉ ra tình trạng người tiêu dùng bị lừa đảo bởi quảng cáo thổi phồng công dụng của thực phẩm chức năng, khiến họ nhầm lẫn giữa thực phẩm chức năng và thuốc chữa bệnh. Nhiều trường hợp đã dẫn đến hậu quả nghiêm trọng cho sức khỏe, như ngộ độc hoặc vô sinh do sử dụng sản phẩm không rõ nguồn gốc. Bộ Y tế và các chuyên gia khuyến cáo người dân cần thận trọng khi sử dụng thực phẩm chức năng, chỉ nên dùng khi cần thiết và tham khảo ý kiến chuyên gia trước khi sử dụng.",
+    "link": "https://vnexpress.net/no-thuc-pham-chuc-nang-nhu-thuoc-chua-benh-4862172.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao thực phẩm chức năng không thể thay thế thuốc chữa bệnh?",
+    "answers": [
+      {
+        "text": "Thực phẩm chức năng chỉ hỗ trợ sức khỏe, không có tác dụng chữa bệnh.",
+        "correct": true
+      },
+      {
+        "text": "Thực phẩm chức năng có thể gây ngộ độc.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng luôn an toàn cho sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Thực phẩm chức năng không cần kiểm tra nguồn gốc.",
         "correct": false
       }
     ]
@@ -4516,33 +4543,6 @@
       },
       {
         "text": "Để xây dựng nhà ở cho người dân.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Lợi ích của cà phê với hệ tiêu hóa",
-    "content": "Cà phê có nhiều lợi ích cho hệ tiêu hóa khi được tiêu thụ ở mức độ vừa phải. Nó kích thích tiêu hóa, thúc đẩy nhu động ruột, và nuôi dưỡng các vi khuẩn có lợi trong ruột. Cà phê còn giúp làm dịu dạ dày và bảo vệ gan, đồng thời giảm nguy cơ viêm nhiễm. Tuy nhiên, nếu uống quá nhiều, cà phê có thể gây kích ứng niêm mạc ruột. Do đó, chỉ nên uống từ 2-3 tách mỗi ngày để nhận được những lợi ích này.",
-    "link": "https://vnexpress.net/loi-ich-cua-ca-phe-voi-he-tieu-hoa-4863657.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cà phê mang lại lợi ích gì cho hệ tiêu hóa?",
-    "answers": [
-      {
-        "text": "Kích thích tiêu hóa và nuôi dưỡng vi khuẩn có lợi",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường sức đề kháng",
-        "correct": false
-      },
-      {
-        "text": "Giúp giảm cân nhanh chóng",
-        "correct": false
-      },
-      {
-        "text": "Cung cấp vitamin C cho cơ thể",
         "correct": false
       }
     ]
