Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,33 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Bò kho sả ớt",
+    "content": "Bò kho sả ớt là một món ăn hấp dẫn với thịt bò mềm béo, được chế biến với sả và ớt tạo nên hương vị đậm đà và cay nồng. Món ăn này thường được ăn cùng cơm trắng, rất thích hợp trong thời tiết se lạnh. Để làm món bò kho, cần chuẩn bị các nguyên liệu như thịt bò, sả, ớt, tỏi, gừng cùng một số gia vị khác để tăng thêm hương vị cho món ăn. Thời gian chế biến khoảng từ 1 đến 1,5 giờ để bò mềm và thấm gia vị.",
+    "link": "https://vnexpress.net/bo-kho-sa-ot-4864301.html",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 7,
+    "question": "Cách làm bò kho sả ớt như thế nào?",
+    "answers": [
+      {
+        "text": "Chọn dẻ sườn bò, ướp với sả, ớt, gia vị và kho trong 1-1.5 giờ.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ cần nấu thịt bò với nước và gia vị trong 15 phút.",
+        "correct": false
+      },
+      {
+        "text": "Sử dụng thịt gà thay cho thịt bò và không cần ướp trước.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần xào thịt bò với hành tỏi rồi ăn ngay.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Người dân mở nhà vệ sinh miễn phí cho khách qua đường",
     "content": "Tại phường Trúc Bạch, quận Ba Đình, Hà Nội, 24 hộ dân và cơ sở kinh doanh đã tình nguyện mở nhà vệ sinh miễn phí cho khách qua đường thông qua mô hình Free Restroom. Mô hình này nhằm tạo điều kiện cho người dân và khách du lịch sử dụng nhà vệ sinh sạch sẽ, miễn phí, và đang được triển khai thí điểm ở các tuyến phố đông người. Nhiều chủ cửa hàng bày tỏ vui mừng khi tham gia vào mô hình này, nhằm góp phần tạo nên một môi trường thân thiện cho du khách.",
     "link": "https://vnexpress.net/nguoi-dan-mo-nha-ve-sinh-mien-phi-cho-khach-qua-duong-4864291.html",
@@ -3011,33 +3038,6 @@
     ]
   },
   {
-    "title": "Xe tải đâm nhau, hai người chết",
-    "content": "Sáng 21/3, tại xã Suối Bạc, huyện Sơn Hòa, Phú Yên, một vụ tai nạn nghiêm trọng đã xảy ra khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng do hư hỏng. Cú tông mạnh đã khiến phần đầu xe tải biến dạng hoàn toàn, hai người trong xe bị mắc kẹt và tử vong tại chỗ. Lực lượng cứu hộ đã có mặt để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân vụ tai nạn đang được điều tra.",
-    "link": "https://vnexpress.net/xe-tai-dam-nhau-hai-nguoi-chet-4864002.html",
-    "cat": "phap-luat",
-    "positivity": 1,
-    "importance": 8,
-    "question": "Tai nạn xe tải ở Phú Yên đã dẫn đến hậu quả gì?",
-    "answers": [
-      {
-        "text": "Hai người tử vong",
-        "correct": true
-      },
-      {
-        "text": "Xe tải bị hư hỏng",
-        "correct": false
-      },
-      {
-        "text": "Có nhiều người bị thương",
-        "correct": false
-      },
-      {
-        "text": "Tài xế bị phạt tiền",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đâm đuôi xe tải, hai người tử vong",
     "content": "Vào sáng ngày 21/3, một vụ tai nạn nghiêm trọng đã xảy ra trên quốc lộ 25, tỉnh Phú Yên khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng vì hư hỏng. Cú va chạm mạnh làm phần đầu xe tải của anh Khoanh biến dạng và hai người trên xe đã bị mắc kẹt trong cabin, dẫn đến tử vong. Lực lượng cứu hộ đã phải mất gần một tiếng đồng hồ để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân của tai nạn vẫn đang được điều tra.",
     "link": "https://vnexpress.net/dam-duoi-xe-tai-hai-nguoi-tu-vong-4864002.html",
@@ -3060,6 +3060,33 @@
       },
       {
         "text": "Vì xe tải chạy quá tốc độ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xe tải đâm nhau, hai người chết",
+    "content": "Sáng 21/3, tại xã Suối Bạc, huyện Sơn Hòa, Phú Yên, một vụ tai nạn nghiêm trọng đã xảy ra khi xe tải do anh Võ Tấn Khoanh điều khiển đâm vào đuôi xe tải khác đang dừng do hư hỏng. Cú tông mạnh đã khiến phần đầu xe tải biến dạng hoàn toàn, hai người trong xe bị mắc kẹt và tử vong tại chỗ. Lực lượng cứu hộ đã có mặt để đưa thi thể nạn nhân ra ngoài, trong khi nguyên nhân vụ tai nạn đang được điều tra.",
+    "link": "https://vnexpress.net/xe-tai-dam-nhau-hai-nguoi-chet-4864002.html",
+    "cat": "phap-luat",
+    "positivity": 1,
+    "importance": 8,
+    "question": "Tai nạn xe tải ở Phú Yên đã dẫn đến hậu quả gì?",
+    "answers": [
+      {
+        "text": "Hai người tử vong",
+        "correct": true
+      },
+      {
+        "text": "Xe tải bị hư hỏng",
+        "correct": false
+      },
+      {
+        "text": "Có nhiều người bị thương",
+        "correct": false
+      },
+      {
+        "text": "Tài xế bị phạt tiền",
         "correct": false
       }
     ]
@@ -4668,33 +4695,6 @@
       },
       {
         "text": "300 tỷ euro",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Khánh Thi nhắc kỷ niệm thanh xuân cùng Chí Anh, Phan Hiển",
-    "content": "Trong dịp sinh nhật lần thứ 43, Khánh Thi chia sẻ những kỷ niệm đáng nhớ trong sự nghiệp và cuộc sống. Cô tự hào về những thành tựu đã đạt được cùng với Chí Anh và Phan Hiển trong lĩnh vực dancesport tại Việt Nam. Khánh Thi nhấn mạnh sự hài lòng về gia đình và sự nghiệp, đồng thời cảm ơn những học trò đã thành công nhờ sự dẫn dắt của mình. Bộ ảnh gần đây cùng chồng và tình cũ cũng gây chú ý trên mạng xã hội.",
-    "link": "https://dantri.com.vn/giai-tri/khanh-thi-nhac-ky-niem-thanh-xuan-cung-chi-anh-phan-hien-20250320160925077.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 7,
-    "question": "Khánh Thi đã chia sẻ điều gì trong dịp sinh nhật 43 tuổi của mình?",
-    "answers": [
-      {
-        "text": "Cô chia sẻ về hành trình sự nghiệp và cuộc sống hạnh phúc.",
-        "correct": true
-      },
-      {
-        "text": "Cô thông báo về một dự án mới trong sự nghiệp.",
-        "correct": false
-      },
-      {
-        "text": "Cô tiết lộ về cuộc sống riêng tư của mình.",
-        "correct": false
-      },
-      {
-        "text": "Cô kêu gọi mọi người tham gia vào một sự kiện thể thao.",
         "correct": false
       }
     ]
